# scythe

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.scy
bin2c/: bin2c.c
docs/: README.md  basics.md  index.md  interfacing_with_jsfx.md  language_constructs.md  module_system.md  operators_and_expressions.md  statements.md  type_system.md  using_memory.md
include/: Analyzer.h  CodeGenerator.h  Parser.h  Result.h  SyntaxTree.h  SyntaxTreePrinter.h  Token.h
include/data-structures/: Array.h  Map.h  MemoryStream.h
scythe/: 1175 Compressor.scy  effect.scy  effect1.scy  import1.scy  main.scy
scythe/builtin/: README.md  atomic.scy  file.scy  gfx.scy  jsfx.scy  math.scy  mem.scy  midi.scy  pin_mapper.scy  slider.scy  stack.scy  str.scy  string.scy  time.scy
scythe/examples/: 1175 Compressor.scy  Gain.scy  README.md  effect.scy  gain.scy  granular_buffer.scy  square_gfx.scy
scythe/examples/3d-renderer/: 3d_renderer.scy  Depth.scy  Main.scy  Math.scy  Models.scy  README.md  Time.scy
scythe/examples/compressor/: CircularBuffer.scy  Main.scy  README.md
scythe/tests/: test_accessing_from_function.scy  test_array_index_conversion.scy  test_block_expr_scope.scy  test_control_flow.scy  test_function_overloading_variadic.scy  test_large_params.scy  test_linked_list.scy  test_loops.scy  test_nested_array.scy  test_scope.scy  test_struct_assignment.scy  test_struct_assignment_passing_chained.scy  test_struct_nesting_returning.scy  test_type_casting.scy  tests.scy
src/: ASanOptions.c  Analyzer.c  BuiltIn.h  BuiltInImports.c  BuiltInImports.h  CodeGenerator.c  Common.h  Compiler.c  Compiler.h  FileUtils.c  FileUtils.h  Main.c  Parser.c  Parser.h  PlatformUtils.c  PlatformUtils.h  Result.c  Result.h  Scanner.c  Scanner.h  StringHelper.h  StringUtils.c  StringUtils.h  SyntaxTree.c  SyntaxTree.h  SyntaxTreePrinter.c  Token.c  Token.h  Utils.h
src/code-generation/: CodeGenerator.c  CodeGenerator.h  Common.c  Common.h  Data.c  Data.h  ExpressionGenerator.c  ExpressionGenerator.h  StatementGenerator.c  StatementGenerator.h  Writer.c  Writer.h
src/code-generation/analyzer/: Analyzer.c  Analyzer.h  ExpressionAnalyzer.c  ExpressionAnalyzer.h
src/code-generation/passes/: BlockExpressionPass.c  BlockExpressionPass.h  BlockRemoverPass.c  BlockRemoverPass.h  CallArgumentPass.c  CallArgumentPass.h  ChainedAssignmentPass.c  ChainedAssignmentPass.h  Common.c  Common.h  ControlFlowPass.c  ControlFlowPass.h  CopyPropagationPass.c  CopyPropagationPass.h  CountUsesAndDependenciesPass.c  CountUsesAndDependenciesPass.h  DefaultValuePass.c  DefaultValuePass.h  ExpressionSimplificationPass.c  ExpressionSimplificationPass.h  ForLoopPass.c  ForLoopPass.h  FunctionCallAccessPass.c  FunctionCallAccessPass.h  FunctionDepsPass.c  FunctionDepsPass.h  FunctionInliningPass.c  FunctionInliningPass.h  GlobalSectionPass.c  GlobalSectionPass.h  MarkUnusedPass.c  MarkUnusedPass.h  MemberExpansionPass.c  MemberExpansionPass.h  Printer.c  Printer.h  RemoveUnusedPass.c  RemoveUnusedPass.h  ResolverPass.c  ResolverPass.h  (+12 more)
src/code-generation/writer/: Writer.c  Writer.h
src/code-generator/: CodeGenerator.c  CodeGeneratorData.c  Data.c  ExpressionGenerator.h
src/data-structures/: Array.c  Array.h  Map.c  Map.h  MemoryStream.c  MemoryStream.h
src/tests/: TestGenerator.c  TestGenerator.h
tests/error-tests/: ErrorTest.c
tests/error-tests/scythe/: circular.scy  imported.scy  imported_private.scy  math  test_compiler.scy  test_control_flow.scy  test_member_expansion.scy  test_parser.scy  test_resolver.scy  test_scanner.scy  test_type_conversion.scy
tests/runtime-tests/: test_accessing_from_expressions.scy  test_accessing_from_function.scy  test_any_array.scy  test_array_index_conversion.scy  test_block_expr_scope.scy  test_builtin.scy  test_control_flow.scy  test_function_overloading_variadic.scy  test_imports.scy  test_input.scy  test_large_params.scy  test_linked_list.scy  test_nested_array.scy  test_numbers.scy  test_optimization.scy  test_postfix_increment.scy  test_scope.scy  test_strings.scy  test_struct_assignment.scy  test_struct_assignment_passing_chained.scy  test_struct_member_access.scy  test_struct_nesting_returning.scy  test_type_casting.scy  tests.scy
tests/runtime-tests/test_imports/: test.scy
tests/runtime-tests/test_imports/deep/: deep.scy
